@@ -41,11 +41,11 @@ Raja Vallee-Rai (rvalleerai@sable.mcgill.ca)
     - general Soot hacker    
     - API freak
     
-Clark Verbrugge (clarkv@ca.ibm.com)
+Clark Verbrugge (clump@cs.mcgill.ca)
     - coffi hacker
     - original Jimple hacker   
 
-Felix Kwok
+Felix Kwok (wkwok@sable.mcgill.ca)
     - VTA re-implementation
     
 -------------------- Funding Acknowledgements ------------------
